# movies-fastapi

./: .gitignore  Dockerfile  LICENSE  pyproject.toml  requirements.txt
app/: crud.py  database.py  main.py  models.py  schemas.py
app/internal/: token.py
app/routers/: comments.py  favorites.py  films.py  users.py
